[package]
name = "rustdmm"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
byondapi = { git = "https://github.com/spacestation13/byondapi-rs.git", version = "0.4.8" }
eyre = "0.6.12"

[dependencies.dmm_tools]
git = "https://github.com/SpaceManiac/SpacemanDMM"
tag = "suite-1.8"
package = "dmm-tools"

[dependencies.dreammaker]
git = "https://github.com/SpaceManiac/SpacemanDMM"
tag = "suite-1.8"
package = "dreammaker"
